--- a/views/restaurants.hbs
+++ b/views/restaurants.hbs
@@ -137,6 +137,7 @@
 </div>
 
 <script>
+    // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
     function validateForm() {
         let requiredFields = document.getElementById('add-restaurant-form')
             .querySelectorAll('[required]')
