--- a/views/edit_city.hbs
+++ b/views/edit_city.hbs
@@ -37,30 +37,27 @@
 <p>Please enter the new name for the city.</p>
 <p><small>Note: * indicates a required field.</small></p>
 
-    <h4>Please Complete All Fields</h4>
-    
-            <form action="/cities/edit_city.html/{{data.0.city_id}}" id="edit_city_form" method="POST">
-                
-                <legend>Please Fill Out All Fields</legend>
-    
-                <fieldset>
-                    <input type="hidden" value="{{data.0.city_id}}" class="form-control" id="city_id" name="city_id" required>
-    
-                    <label for="city_name">* Name:</label><br>
-                    <input type="text" id="city_name" name="city_name" value="{{data.0.city_name}}" required><br>
-    
-                </fieldset>
-    
-                <input type="submit" value="Edit City" name="editCity" id="edit-city-button" class="btn btn-primary" 
-                    onClick="if (validateForm()) {alert(`Successfully updated City ID #{{data.0.city_id}}`)};">
-    
-                <input type="reset" class="btn btn-secondary">
-    
-                <a href='/cities'><input class="btn btn-secondary" type="button" value="Cancel"></a>
-    
-            </form>
+<h4>Please Complete All Fields</h4>
+
+    <form action="/cities/edit_city.html/{{data.0.city_id}}" id="edit_city_form" method="POST">
+
+        <input type="hidden" value="{{data.0.city_id}}" class="form-control" id="city_id" name="city_id" required>
+
+        </p><label for="city_name">* City Name:</label>
+        <input type="text" id="city_name" name="city_name" value="{{data.0.city_name}}" required></p>
+
+        <input type="submit" value="Edit City" name="editCity" id="edit-city-button" class="btn btn-primary" 
+            onClick="if (validateForm()) {alert(`Successfully updated City ID #{{data.0.city_id}}`)};">
+
+        <input type="reset" class="btn btn-secondary">
+
+        <a href='/cities'><input class="btn btn-secondary" type="button" value="Cancel"></a>
+
+    </form>
 
 <script>
+    // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
+    // Checks if every required field is filled out before sending alert
     function validateForm() {
         let requiredFields = document.getElementById('update-city-form')
             .querySelectorAll('[required]')
