--- a/views/edit_restaurant_cuisine.hbs
+++ b/views/edit_restaurant_cuisine.hbs
@@ -35,47 +35,43 @@
 
 <h2>Update a Restaurant-Cuisine's Association:</h2>
 <p>Please select the Restaurant and Cuisine you would like to update to.</p>
-<p><small>Note: * indicates a required field. Old values are listed above the dropdown options.
-</small></p>
+<p><small>Note: * indicates a required field. Old values are listed above the dropdown options.</small></p>
+<h4>Please Complete All Fields</h4>
+    <form action="/restaurant_has_cuisines/edit_restaurant_cuisine.html/{{data.0.restaurant_cuisine_id}}" id="edit_restaurant_cuisine_form" method="POST">
+        <input type="hidden" value="{{data.0.restaurant_cuisine_id}}" class="form-control" id="restaurant_cuisine_id" name="restaurant_cuisine_id" required>
 
-    <h4>Please Complete All Fields</h4>
-    
-            <form action="/restaurant_has_cuisines/edit_restaurant_cuisine.html/{{data.0.restaurant_cuisine_id}}" id="edit_restaurant_cuisine_form" method="POST">
-    
-                <fieldset>
-                    <input type="hidden" value="{{data.0.restaurant_cuisine_id}}" class="form-control" id="restaurant_cuisine_id" name="restaurant_cuisine_id" required>
-    
-                    <label for="old_restaurant_value">Old Restaurant Name: </label>&nbsp; {{data.0.restaurant_id}}<br>
-    
-                    <p><label for="update-restaurant-name">* Restaurant Name: </label> 
-                    <select name="restaurant_name" id="restaurant_name" required>
-                        <option value="">Select a Restaurant</option>
-                        {{#each restaurants}}
-                        <option value="{{this.restaurant_id}}">{{this.restaurant_name}}</option>
-                        {{/each}}
-                    </select></p>
+        <label for="old_restaurant_value">Old Restaurant Name: </label>&nbsp; {{data.0.restaurant_id}}<br>
 
-                    <label for="old_cuisine_value">Old Cuisine Name: </label>&nbsp; {{data.0.cuisine_id}}<br>
-                    <p><label for="update-cuisine-name">* Cuisine Name: </label> 
-                    <select name="cuisine_name" id="cuisine_name" required>
-                        <option value="">Select a Restaurant</option>
-                        {{#each cuisines}}
-                        <option value="{{this.cuisine_id}}">{{this.cuisine_name}}</option>
-                        {{/each}}
-                    </select></p>
-    
-                </fieldset>
-    
-                <input type="submit" value="Edit Restaurant-Cuisine" name="editRestaurantCuisine" id="edit-restaurant-cuisine-button" class="btn btn-primary"
-                onClick="if (validateForm()) {alert(`Successfully updated Restaurant-Cuisine ID #{{data.0.restaurant_cuisine_id}}`)};">
-    
-                <input type="reset" class="btn btn-secondary">
-    
-                <a href='/restaurant_has_cuisines'><input class="btn btn-secondary" type="button" value="Cancel"></a>
-    
-            </form>
+        <p><label for="update-restaurant-name">* Restaurant Name: </label> 
+        <select name="restaurant_name" id="restaurant_name" required>
+            <option value="">Select a Restaurant</option>
+                {{#each restaurants}}
+                <option value="{{this.restaurant_id}}">{{this.restaurant_name}}</option>
+                {{/each}}
+        </select></p>
+
+        <label for="old_cuisine_value">Old Cuisine Name: </label>&nbsp; {{data.0.cuisine_id}}<br>
+            
+        <p><label for="update-cuisine-name">* Cuisine Name: </label> 
+        <select name="cuisine_name" id="cuisine_name" required>
+            <option value="">Select a Restaurant</option>
+                {{#each cuisines}}
+                <option value="{{this.cuisine_id}}">{{this.cuisine_name}}</option>
+                {{/each}}
+        </select></p>
+
+        <input type="submit" value="Edit Restaurant-Cuisine" name="editRestaurantCuisine" id="edit-restaurant-cuisine-button" class="btn btn-primary"
+            onClick="if (validateForm()) {alert(`Successfully updated Restaurant-Cuisine ID #{{data.0.restaurant_cuisine_id}}`)};">
+
+        <input type="reset" class="btn btn-secondary">
+
+        <a href='/restaurant_has_cuisines'><input class="btn btn-secondary" type="button" value="Cancel"></a>
+
+    </form>
 
 <script>
+    // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
+    // Checks if every required field is filled out before sending alert
     function validateForm() {
         let requiredFields = document.getElementById('update-restaurant-cuisine')
             .querySelectorAll('[required]')
